--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+   {
+      "type": "vcs",
+      "url": "git@bitbucket.org:osynligab/osynlig-wordpress-theme.git"
     }
   ],
   "require": {
@@ -38,7 +42,8 @@
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4.2",
     "oscarotero/env": "^1.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "roots/wp-password-bcrypt": "1.0.0",
+    "osynligab/osynlig-wordpress-theme":"dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
